changing the static controls back to none static to be able to see them in the designer

--- a/KanNaim2010/Kan-Naim-Main/Kan-Naim-Main.csproj
+++ b/KanNaim2010/Kan-Naim-Main/Kan-Naim-Main.csproj
@@ -345,6 +345,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="img\Thumbs.db" />
     <None Include="Properties\Settings.settings">
