--- a/KanNaim2010/DbSql/DbSql.csproj
+++ b/KanNaim2010/DbSql/DbSql.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>DataClassesKanNaim.dbml</DependentUpon>
     </Compile>
     <Compile Include="Filter.cs" />
+    <Compile Include="Insert.cs" />
     <Compile Include="Lookup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
