--- a/KanNaim2010/DbSql/DbSql.csproj
+++ b/KanNaim2010/DbSql/DbSql.csproj
@@ -53,6 +53,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesKanNaim.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Delete.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="Insert.cs" />
     <Compile Include="Lookup.cs" />
@@ -75,12 +76,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Copy of DataClassesKanNaim.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>Copy of DataClassesKanNaim.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="DataClassesKanNaim.dbml.layout">
       <DependentUpon>DataClassesKanNaim.dbml</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Copy of DataClassesKanNaim.dbml.layout">
+      <DependentUpon>Copy of DataClassesKanNaim.dbml</DependentUpon>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
